# pyaerocom-plotting

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/pyaerocom_plotting/: __init__.py  const.py  plot_pixel_map.py  plotting.py  readers.py  stats.py
src/pyaerocom_plotting/cli/: pyaerocom_plot.py  pyaerocom_plot_colocated.py  pyaerocom_plot_json.py
tests/: test_SUPaperplot.py
tests/testdata/: ALL-Aeronet-od550aer-Column.json
